Fix post listing layout on mobile

--- a/ui/src/custom.css
+++ b/ui/src/custom.css
@@ -627,3 +627,8 @@ a.text-body {
 .mod-log-filter-label {
   text-transform: capitalize;
 }
+
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
